--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: HydroHorizon
-email: your-email@example.com
+email: hydrohorizon@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the website of HydroHorizon (触电视界工作室).
+  This is the website of HydroHorizon.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://hydrohorizon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
